--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "moltin_import_to_algolia",
   "version": "0.0.1",
   "author": "Particular.",
+  "description": "Please contact info@uniquelyparticular.com for permission to use",
+  "private": true,
+  "license": "UNLICENSED",
+  "repository": "github:uniquelyparticular/moltin-import-to-algolia",
   "bin": {
     "moltin-to-algolia": "bin/moltin-to-algolia"
   },
