--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
   "bin": {
     "moltin-to-algolia": "bin/moltin-to-algolia"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "@moltin/request": "^1.4.4",
     "algoliasearch": "3.32.0",
     "cli-progress": "^2.1.1",
     "dotenv": "^6.2.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "prettier": "^1.16.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "husky": "^1.3.1",
+    "pretty-quick": "^1.10.0"
+  }
 }
