--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "author": "Adam Grohs <adam@uniquelyparticular.com> (https://uniquelyparticular.com)",
   "owner": "Particular.",
   "description": "Please contact Particular. via info@uniquelyparticular.com for any questions",
+  "keywords": [
+    "moltin",
+    "alogolia",
+    "search",
+    "ecommerce",
+    "integration",
+    "cli"
+  ],
   "license": "MIT",
   "homepage": "https://github.com/uniquelyparticular/moltin-import-to-algolia#readme",
   "repository": "github:uniquelyparticular/moltin-import-to-algolia",
