--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moltin-import-to-algolia",
   "version": "1.0.0",
-  "author": "Adam Grohs <adam@uniquelyparticular.com> (https://uniquelyparticular.com)",
+  "author": "Adam Grohs <info@uniquelyparticular.com> (https://uniquelyparticular.com)",
   "owner": "Particular.",
   "description": "Please contact Particular. via info@uniquelyparticular.com for any questions",
   "keywords": [
