testing scoped package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moltin-import-to-algolia",
+  "name": "@particular./moltin-import-to-algolia",
   "version": "1.0.0",
   "author": "Adam Grohs <info@uniquelyparticular.com> (https://uniquelyparticular.com)",
   "owner": "Particular.",
