chore: fix keywords in package.json

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "alogolia",
     "search",
     "ecommerce",
-    "integration",
     "cli",
+    "integration",
+    "node",
+    "javascript",
+    "instantsearch",
     "particular",
     "particular."
   ],
