--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@particular./import-moltin-to-algolia",
-  "version": "1.0.0",
+  "version": "0.0.0-semantic-release",
   "author": "Adam Grohs <info@uniquelyparticular.com> (https://uniquelyparticular.com)",
   "owner": "Particular.",
   "description": "Please contact Particular. via info@uniquelyparticular.com for any questions",
@@ -28,6 +28,11 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
+  "scripts": {
+    "clean-install": "yarn install --force",
+    "test": "jest --passWithNoTests",
+    "semantic-release": "semantic-release"
+  },
   "dependencies": {
     "@moltin/request": "1.5.3",
     "algoliasearch": "3.32.1",
@@ -38,6 +43,9 @@
   },
   "devDependencies": {
     "husky": "1.3.1",
-    "pretty-quick": "1.10.0"
+    "jest": "^24.7.1",
+    "pretty-quick": "1.10.0",
+    "rimraf": "^2.6.3",
+    "semantic-release": "^15.13.8"
   }
 }
