--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "jest": "24.7.1",
     "pretty-quick": "1.10.0",
     "semantic-release": "15.13.9"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
