--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "husky": "2.1.0",
     "jest": "24.7.1",
     "pretty-quick": "1.10.0",
-    "semantic-release": "15.13.12"
+    "semantic-release": "15.13.12",
+    "ts-jest": "^24.0.2"
   },
   "publishConfig": {
     "access": "public"
